--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/third-parties": "^14.1.3",
     "crypto-js": "^4.2.0",
     "firebase": "^10.7.0",
     "js-cookie": "^3.0.5",
